# TitleCapitalization

./: CMakeLists.txt  TitleCapitalization.cpp  TitleCapitalization.h
TitleCapitalization_tests/: CMakeLists.txt
TitleCapitalization_tests/basic_tests/: CMakeLists.txt  basic_check.cpp  title_check.cpp
TitleCapitalization_tests/lib/: googletest
